--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="This Speed Typing Test will give you an acuurate speed test and help increase your typing speed"/>
 
-    <title>Typing Test</title>
+    <title>SpeedMee</title>
 
     <link rel="icon" href="icon.ico">
 
@@ -66,7 +66,7 @@
         </a>
       </div>
 
-      <footer class="center">© SpeedMe.in.&nbsp; All rights reserved.
+      <footer class="center">© SpeedMee.in.&nbsp; All rights reserved.
       </footer>
     </div>
 
